force-app/main/default/objects/Whitespace__c/Whitespace__c.object-meta.xml
<CustomObject>
    <description>Account White Space Analysis is a process used by businesses to identify untapped opportunities or areas of potential growth within their existing customer accounts. It involves analyzing the current products or services that a customer is using and identifying additional offerings that could be beneficial to them.</description>
    <label>Whitespace</label>
    <nameField>
        <label>Offering</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Whitespaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>