force-app/main/default/objects/Whitespace__c/fields/AccountPlanRef__c.field-meta.xml
<CustomField>
    <fullName>AccountPlanRef__c</fullName>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Whitespaces</relationshipLabel>
    <relationshipName>Whitespaces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>