force-app/main/default/objects/Whitespace__c/fields/CompetitorRef__c.field-meta.xml
<CustomField>
    <fullName>CompetitorRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Whitespaces</relationshipLabel>
    <relationshipName>Whitespaces</relationshipName>
    <type>Lookup</type>
</CustomField>