force-app/main/default/objects/Whitespace__c/fields/Spend__c.field-meta.xml
<CustomField>
    <fullName>Spend__c</fullName>
    <label>Spend</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>