force-app/main/default/objects/Whitespace__c/fields/WithPick__c.field-meta.xml
<CustomField>
    <fullName>WithPick__c</fullName>
    <label>With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Us</fullName>
            </value>
            <value>
                <fullName>Executes Internally</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>