force-app/main/default/objects/Whitespace__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <inlineHelpText>The year (financial or calendar) of spend.</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>